--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photo gallery UI</title>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+<div class="gallery">
+        <div class="item">
+          <a href="https://www.instagram.com/p/C5TNLucPnrl/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA%3D%3D" target=window>
+            <img src="img/insta_photo_ddohuni_.jpg" alt="image">
+            <h3>@oxo._.dduddu</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="https://www.instagram.com/p/C4r9jMKvsdb/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA%3D%3D" target=window>
+            <img src="img/insta_photo_zzangemom_.jpg" alt="image">
+            <h3>@hee__heej</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="https://www.instagram.com/reel/C6Gtk51PqDz/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target=window>
+            <img src="img/insta_reels_ddohuni_.jpg" alt="image">
+            <h3>@ddohuni_mom</h3>
+          </a>
+        </div>
+        <div class="item">
+          <a href="https://www.instagram.com/reel/C4e4CVOPQxu/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target=window>
+            <img src="img/insta_reels_juwon_.jpg" alt="image">
+            <h3>@oxo._.dduddu</h3>
+          </a>
+        </div>
+ <div class="item">
+          <a href="https://www.instagram.com/p/C1OfwXrvRc_/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA%3D%3D" target=window>
+            <img src="img/insta_photo_roganmom_.jpg" alt="image">
+            <h3>@yeolmu._.shsm</h3>
+          </a>
+        </div>
+      </div>
+</body>
+
+</html>
